objects/QualificationCharacteristic__c.object
<CustomObject>
    <fields>
        <fullName>DocumentCharacteristic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document characteristic used by this record.</description>
        <inlineHelpText>The document characteristic used by this record.</inlineHelpText>
        <label>Document Characteristic</label>
        <referenceTo>DocumentCharacteristic__c</referenceTo>
        <relationshipLabel>Qualification Characteristics</relationshipLabel>
        <relationshipName>QualificationCharacteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoodBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the qualification characteristic is good.</description>
        <inlineHelpText>Denotes if the qualification characteristic is good.</inlineHelpText>
        <label>Good</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QualificationCharacteristicEID__c</fullName>
        <description>The Enterprise ID of this record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID of this record.</inlineHelpText>
        <label>Qualification Characteristic EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QualificationDocumentOption__c</fullName>
        <description>The qualification option used by this record.</description>
        <inlineHelpText>The qualification option used by this record.</inlineHelpText>
        <label>Qualification Document Option</label>
        <referenceTo>QualificationDocumentOption__c</referenceTo>
        <relationshipLabel>Qualification Characteristics</relationshipLabel>
        <relationshipName>QualificationCharacteristics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Qualification Characteristic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Qualification Characteristic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualification Characteristics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>